--- a/spooky/index.html
+++ b/spooky/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://fonts.googleapis.com/css?family=Creepster&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script type="text/javascript">
   (function() {
@@ -81,6 +82,7 @@ body {
   text-align: center;
   color: white;
   font-size: 40px;
+  font-family: 'Creepster', cursive;
   letter-spacing: 2px;
 }
 .time-to span {
@@ -93,7 +95,7 @@ body {
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle">
-    <h1 style="text-align:center">Carson might be initiated in</h1>
+    <h1 style="font-family: 'Creepster', cursive; text-align:center">Carson might be initiated in</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">
       <div class='wrap' ng-app='app'>
