--- a/festive/index.html
+++ b/festive/index.html
@@ -195,10 +195,10 @@ function init() {
     snow();
 }
 
-canvas.addEventListener("mousemove", function(e) {
-    mX = e.clientX,
-    mY = e.clientY
-});
+// canvas.addEventListener("mousemove", function(e) {
+//     mX = e.clientX,
+//     mY = e.clientY
+// });
 
 window.addEventListener("resize",function(){
     canvas.width = window.innerWidth;
