--- a/festive/index.html
+++ b/festive/index.html
@@ -6,7 +6,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 <style>
     @import url(https://fonts.googleapis.com/css?family=Comfortaa);
 
@@ -50,7 +53,13 @@
         font-size: 50px;
     }
 
-
+.a0{
+    color:red;
+}
+.a1{
+    color:green;
+    color:green;
+}
 
 #body2{margin:0;height:100%;position:absolute;left:0;right:0;}
 canvas{
@@ -76,7 +85,7 @@ canvas{
 </span>
 <div class="bgimg w3-display-container w3-text-white" style="z-index: -1;">
     <div class="w3-display-middle">
-        <h1 style="text-align:center">Carson might be initiated in</h1>
+        <h1 style="text-align:center"><span id="word">Carson might be initiated in</span></h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
         <p class="w3-large w3-center">
         <div class='wrap' ng-app='app'>
@@ -141,7 +150,12 @@ function snow() {
             flake.velX += Math.cos(flake.step += .05) * flake.stepSize;
         }
 
-        ctx.fillStyle = "rgba(255,255,255," + flake.opacity + ")";
+        if (i % 5){
+            ctx.fillStyle = "rgba(255,255,255," + flake.opacity + ")";
+        } else {
+            ctx.fillStyle = "rgba(0,168,193," + flake.opacity + ")";
+        }
+
         flake.y += flake.velY;
         flake.x += flake.velX;
 
@@ -251,6 +265,20 @@ init();
       }
     ]);
   }).call(this);
+</script>
+<script type="text/javascript">
+    $( "#word" ).each(function( index ) {
+      var originalText = $( this ).text();
+      var newText = "";
+      for( var i = 0; i < originalText.length; i++)
+      {
+          if (i % 2 === 0)
+            newText += "<span " +"class=\"a"+ i%2 + "\"" +">" + originalText.charAt(i) + "</span>";
+          else
+            newText += "<span " +"class=\"a"+ i%2 + "\"" +">" + originalText.charAt(i) + "</span>";
+      }
+      $( this ).html(newText);
+    });
 </script>
 </html>
 
