--- a/festive/index.html
+++ b/festive/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -38,6 +39,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-family: 'Mountains of Christmas', cursive;
         height: 50px;
     }
 
@@ -55,10 +57,11 @@
 
 .a0{
     color:red;
+    font-family: 'Mountains of Christmas', cursive;
 }
 .a1{
     color:green;
-    color:green;
+    font-family: 'Mountains of Christmas', cursive;
 }
 
 #body2{margin:0;height:100%;position:absolute;left:0;right:0;}
