--- a/arcticsilence/index.html
+++ b/arcticsilence/index.html
@@ -82,7 +82,7 @@
 
     .time-to {
         text-align: center;
-        color: white;
+        color: black;
         font-size: 40px;
         /*font-family: 'Creepster', cursive;*/
         letter-spacing: 2px;
@@ -96,7 +96,7 @@
 <body>
 <div class="bgimg w3-display-container w3-text-white">
     <div class="w3-display-middle">
-        <h1 style="text-align:center">Carson might be initiated in</h1>
+        <h1 style="text-align:center; color:black">Carson might be initiated in</h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
         <p class="w3-large w3-center">
         <div class='wrap' ng-app='app'>
